💄 Align content in the middle correctly

--- a/app/static_src/sass/basics/_layout.scss
+++ b/app/static_src/sass/basics/_layout.scss
@@ -66,7 +66,6 @@ html, body {
 
 body {
     background-color: $neutral-grey2;
-    margin: 0;
 }
 
 .container {
@@ -84,16 +83,14 @@ body {
 .site-navigation,
 .site-main,
 .site-footer {
+    display: block;
     padding: 15px;
 
     @media screen and (min-width: $desktop) {
         padding: 0;
     }
 }
-
-.section {
-    padding: 0 15px;
-}
+ 
 
 .site-header {
     background-color: $primary-white;
